criei a parte de cursos profissionalizantes, e modifiquei as imagens, e troquei os icones dos contadores

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -117,7 +117,7 @@
                 </div>
             </div>
             <div class="owl-carousel-item position-relative">
-                <video src="img/vid/game_2.mp4" autoplay muted loop></video>
+                <video src="img/vid/game_2.mp4" autoplay muted loop class="video"></video>
                 <div class="owl-carousel-inner">
                     <div class="container">
                         <div class="row justify-content-start" style="padding-left: 25%;">
@@ -341,6 +341,128 @@
             </div>
         </div>
     </div>
+        <br>
+        <br>
+        <br>
+    <!--Cursos Profisionalizantes-->
+    <div class="container-xxl bg-light my-6 py-6 pt-0"  id="cursokid">
+        <div class="container">
+            
+            <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 500px;">
+            </br>
+                <p class="text-primary text-uppercase mb-2">Nossos Cursos Profisionalizantes</p>
+                <h1 class="display-6 mb-4">Do zero ao avançado!</h1>
+                <spam>Cursos pra educar e profissionalizar crianças e adolescentes, incluindo desde cedo no maravilhoso mundo da tecnologia.<spam>
+
+            </div>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Analista Tech</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso1.webp" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidcoding.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Assistente De Designer</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso2.webp" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidtube.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Designer Digital</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso3.jpg" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidmath.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </br>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Empreendedor De Sucesso</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso4.jpg" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidtech.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Gestão E Finanças</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso5.png" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidrobot.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Trabalho Em Equipe</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso6.jpg" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidgames.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </br>
+            <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="product-item d-flex flex-column bg-white rounded overflow-hidden h-100">
+                        <div class="text-center p-4">
+                            <h3 class="mb-3">Curso De Desenvolvimento Profissional</h3>
+                            <span>Suspendisse metus diam, consequat a diam id, fringilla consequat orci. Morbi at nisi sapien. Etiam euismod enim id augue iaculis, id finibus enim faucibus. Duis semper.</span>
+                        </div>
+                        <div class="position-relative mt-auto">
+                            <img class="img-fluid" src="img/curso7.jpeg" alt="">
+                            <div class="product-overlay">
+                                <a class="btn btn-lg-square btn-outline-light rounded-circle" href="kidapp.html"><i class="fa fa-eye text-primary"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Product End -->
     </div>
     <!-- Copyright Start -->
