--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -141,7 +141,7 @@
             <div class="row g-4">
                 <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.1s">
                     <div class="fact-item bg-light rounded text-center h-100 p-5">
-                        <i class="fa fa-certificate fa-4x text-primary mb-4"></i>
+                        <img src="img/cursos.png" alt="">
                         <p class="mb-2">Mais de </p>
                         <h1 class="display-5 mb-0" data-toggle="counter-up">30</h1>
                         <p class="mb-2">Cursos no Portfólio </p>
@@ -150,7 +150,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.3s">
                     <div class="fact-item bg-light rounded text-center h-100 p-5">
-                        <i class="fa fa-users fa-4x text-primary mb-4"></i>
+                        <img src="img/profissionais.png" alt="">
                         <p class="mb-2">Mais de</p>
                         <h1 class="display-5 mb-0" data-toggle="counter-up">100</h1>
                         <p class="mb-2">Profissionais dedicados</p>
@@ -159,7 +159,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.5s">
                     <div class="fact-item bg-light rounded text-center h-100 p-5">
-                        <i class="fa fa-bread-slice fa-4x text-primary mb-4"></i>
+                        <img src="img/grupos.png" alt="">
                         <p class="mb-2">Mais de </p>
                         <h1 class="display-5 mb-0" data-toggle="counter-up">200</h1>
                         <p class="mb-2">Alunos </p>
@@ -168,7 +168,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6 wow fadeIn" data-wow-delay="0.7s">
                     <div class="fact-item bg-light rounded text-center h-100 p-5">
-                        <i class="fa fa-cart-plus fa-4x text-primary mb-4"></i>
+                        <img src="img/clock.png" alt="">
                         <p class="mb-2">Mais de </p>
                         <h1 class="display-5 mb-0" data-toggle="counter-up">1000</h1>
                         <p class="mb-2">Horas de Curso </p>
@@ -341,9 +341,7 @@
             </div>
         </div>
     </div>
-        <br>
-        <br>
-        <br>
+      
     <!--Cursos Profisionalizantes-->
     <div class="container-xxl bg-light my-6 py-6 pt-0"  id="cursokid">
         <div class="container">
