alterado endereços, alterado cor base endereço e counter

--- a/Codigo/index2.html
+++ b/Codigo/index2.html
@@ -132,7 +132,7 @@
         <!-- Carousel End -->
  
         <div class="arraste">
-            <img src="img/seta.gif" style="max-width: 60px;" alt="seta">
+            <img src="img/seta.gif" style="max-width: 100px;" alt="seta">
         </div>
 
         <div class="arrastelado">
@@ -140,7 +140,10 @@
         </div>
 
         <div class="arraste2">
-            <img src="img/seta2.gif" style="max-width: 60px;" alt="seta">
+            <img src="img/seta.gif" style="max-width: 100px;-moz-transform: scaleX(-1);
+            -o-transform: scaleX(-1);
+            -webkit-transform: scaleX(-1);
+            transform: scaleX(-1);" alt="seta">
         </div>
 
 
