atualizadas as caixas de informação pincipal

--- a/Codigo/index2.html
+++ b/Codigo/index2.html
@@ -88,7 +88,7 @@
                     <div class="owl-carousel-inner">
                         <div class="containercursos">
                             <div class="batata" >
-                            <h1 class= "titulocurso"style="text-align: center;">Desenvolvimento de Games</h1>
+                            <h1 class= "titulocurso"style="text-align: center;">Programação</h1>
                         </div>
                             <div class="quadrado">
                                <p class="texto" style="text-align: justify;"> Descubra o mundo da programação em nosso curso exclusivo para crianças! Com linguagens como Scratch e Python, as crianças aprenderão conceitos de programação de forma divertida. Desenvolvendo habilidades como pensamento lógico e resolução de problemas, 
@@ -98,13 +98,19 @@
                             </div>
                             <div class="flex">
                                  <div class="balao">
-                                     <h5>Imagem um</h5>
+                                         <i class="fa fa-clock-o fa-3x" aria-hidden="true"></i>
+                                         <p style="color: #fff; margin-bottom: 0; font-size: small;">Carga horaria</p>
+                                         <h6 class="description" style="font-size: larger; margin-top: 2px;">80 horas</h6>
                                  </div>
                                  <div class="balao1">
-                                    <h5>Imagem dois</h5>
+                                    <i style="margin: 0;" class="fa fa-calendar fa-3x" aria-hidden="true"></i>
+                                    <p style="color: #fff; margin-bottom: 0;  font-size: small";>Duração</p>
+                                    <h6 class="description" style="font-size: larger; margin-top: 2px;">12 meses</h6>
                                 </div>
                                 <div class="balao2">
-                                    <h5>Imagem três</h5>
+                                    <i class="fa fa-level-up fa-3x" aria-hidden="true"></i>
+                                    <p style="color: #fff; margin-bottom: 0; font-size: small";>Nível</p>
+                                    <h6 class="description" style="font-size: larger; margin-top: 2px;">Iniciante</h6>
                                 </div>
                             </div>
                         
