alterei as imagens do curso, e deixei responsivo no celular

--- a/Codigo/index.html
+++ b/Codigo/index.html
@@ -252,8 +252,8 @@
                         <div>
                             <video src="img/vid/game_1.mp4" autoplay muted loop class="videoabout" ></video>
                         </div>
-                        <div class="align-self-end videoabout">
-                            <video src="img/vid/game_2.mp4" autoplay muted loop class="videoabout"></video>
+                        <div class="align-self-end videoabout1">
+                            <video src="img/vid/game_2.mp4" autoplay muted loop class="videoabout1"></video>
                         </div>
                     </div>
                 </div>
