arrumado index para celular

--- a/Codigo/index2.html
+++ b/Codigo/index2.html
@@ -126,7 +126,7 @@
                     <div class="owl-carousel-inner">
                         <div class="circulo">
 
-                                <img src="img/circulo.gif" > 
+                                <img src="img/circulo_1.gif" > 
                                 
             
                                 </div>
