--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15691.588728897103!2d-40.3219234!3d-10.508764!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x76d67a9eb9ab7b7%3A0x9073ac44e1877a0f!2sC%C3%B3digo%20Kid%20Campo%20Formoso%20-%20Escola%20de%20Programa%C3%A7%C3%A3o%2C%20Rob%C3%B3tica%20E%20Tecnologia!5e0!3m2!1spt-BR!2sbr!4v1688596996884!5m2!1spt-BR!2sbr" width="500" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     <div class="end">
                 <p>Endereço:</p>
-                <span> Praça Herculano Menezes, N° 16 - 1° Andar - Centro, Campo Formoso - BA, 44790-000</span>
+                <span> R. Hipólito Ribeiro - Campo Formoso, BA, 44790-000</span>
             </div>
         </div>        
 
@@ -545,7 +545,7 @@
         
         <div class="end_baixo" >
             <p>Endereço:</p>
-            <span> Praça Herculano Menezes, N° 16 - 1° Andar - Centro, Campo Formoso - BA, 44790-000</span>
+            <span> R. Dr. Salustiano Figueiredo, 217 - Centro, Sr. do Bonfim - BA, 48970-000</span>
             </div>
     
     </div>
